# simpleindex

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: annotated.toml
src/simpleindex/: __init__.py  __main__.py  configs.py  routes.py
tests/: test_build_routes.py  test_configs.py  test_routes.py
tests/examples/: annotated.toml
